# unutrip_v2

./: .env.example  .gitattributes  .gitignore  AGENT_PROMPT_UPDATE_8_10.md  README.md  README_UPDATE_FINAL.md  README_UPDATING_CLEAN.md  README_UPDATING_CLEAN_v2.md  build.gradle  docker-compose.prod.yml  docker-compose.yml  gradlew  gradlew.bat  settings.gradle
backend/rag/: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements-embeddings.txt  requirements-rerank.txt  requirements.txt
backend/rag/app/: deps.py  main.py  middleware.py  rate_limit_middleware.py
backend/rag/app/routers/: ai_itinerary.py  health.py  rag.py
backend/rag/app/routers/admin/: __init__.py  ai_monitoring.py  data_quality.py  (+2 more)
backend/rag/app/schemas/: __init__.py  itinerary.py
backend/rag/core/: __init__.py  artifacts.py  config.py  fixture_paths.py  logging_config.py  metrics.py  production.py  rate_limit_redis.py  readiness.py  redis_client.py  schemas.py  security.py  text_normalization.py
backend/rag/data/cache/: gemini_response_cache.jsonl
backend/rag/data/indexes/: rag_artifacts_manifest.json
backend/rag/data/processed/: README.txt
backend/rag/data/raw/: dataset_vip_fixed.xlsx
backend/rag/docs/: ARTIFACT_POLICY.md  DEPLOY_CHECKLIST.md  PRODUCTION.md  RETRIEVAL.md
backend/rag/domain/: __init__.py  models.py
backend/rag/domain/contracts/: __init__.py  rag_chat_simple.py
backend/rag/eval/: golden_queries.json  golden_queries_ci.json
backend/rag/generation/: context_builder.py  prompt_builder.py
backend/rag/jobs/: build_rag_artifacts.py  package_rag_artifacts.py
backend/rag/llm/: gemini_executor.py  gemini_generator.py  response_cache.py
backend/rag/pipelines/: __init__.py  rag_pipeline.py  request_logger.py  response_builder.py
backend/rag/pipelines/policies/: __init__.py  generation_router.py  location_filter.py
backend/rag/providers/: __init__.py  gemini_provider.py  protocol.py  template_provider.py
backend/rag/repositories/: __init__.py  artifact_store.py
backend/rag/retrieval/: bm25_retriever.py  embedding_encoder.py  fusion.py  hybrid_retriever.py  index_text.py  intent_parser.py  logger.py  normalizer.py  place_store.py  recall_fusion.py  rerank.py  rerank_stub.py  text_utils.py  vector_retriever.py
backend/rag/retrieval/scoring/: __init__.py  dedup.py  travel_rules.py
backend/rag/scripts/: 06_build_bm25_index.py  07_build_embedding_index.py  check_manifest_staged_diff.py  clean_dev_artifacts.py  docker_entrypoint.sh  eval_rag_retrieval.py  export_app_places_to_json.py  export_rag_knowledge_base_to_corpus.py  fetch_rag_artifacts.py  sync_fixture_data.py  verify_rag_artifacts.py
backend/rag/services/: rag_service.py
backend/rag/services/admin/: __init__.py  data_quality_service.py  log_store.py  rag_artifacts.py  system_service.py
backend/rag/services/itinerary/: __init__.py  builder.py  catalog.py  category.py  scoring.py  service.py  text_utils.py
backend/rag/tests/: conftest.py  test_artifacts_manifest.py  test_fixture_corpus.py  test_fusion.py  test_gemini_executor.py  test_intent_parser.py  test_pipeline_city_match.py  test_pipeline_province_match.py  test_production.py  test_readiness.py  test_redis_rate_limit.py  test_rerank.py  test_retrieval_fixture.py  test_schemas.py  test_verify_artifacts.py
backend/rag/tests/api/: test_admin_http.py  test_health.py  test_rag_http.py
backend/rag/tests/contracts/: test_rag_chat_simple_contract.py  test_rag_node_fixture.py
backend/rag/tests/fixtures/: README.md  places_app_sample.json  rag_corpus_sample.jsonl
backend/rag/tests/generation/: test_builders.py
backend/rag/tests/llm/: test_gemini_generator_unit.py
backend/rag/tests/pipelines/: test_generation_router.py  test_location_filter_fallback.py  test_rag_pipeline_unit.py  test_request_logger.py  test_response_builder.py
backend/rag/tests/providers/: test_gemini_provider.py  test_template_provider.py
backend/rag/tests/repositories/: test_artifact_store.py
backend/rag/tests/retrieval/: test_ai_request_logger.py  test_bm25_retriever.py  test_hybrid_retriever_edges.py  test_hybrid_vector_fusion.py  test_place_store.py  test_recall_fusion.py  test_rerank_edges.py  test_scoring.py  test_travel_rules_golden.py  test_vector_retriever.py
backend/rag/tests/services/: test_itinerary_service.py
(+453 files in other folders)
