[project]
name = "unutrip-rag"
version = "0.3.0"
description = "UnuTrip FastAPI RAG service (retrieval + Gemini generation)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<0.116",
    "uvicorn[standard]>=0.32.0,<0.33",
    "pydantic>=2.10.0,<3",
    "python-dotenv>=1.0.0,<2",
    "pandas>=2.2.0,<3",
    "openpyxl>=3.1.0,<4",
    "pyarrow>=14.0.0,<19",
    "numpy>=1.26.0,<3",
    "rapidfuzz>=3.9.0,<4",
    "rank-bm25>=0.2.2,<0.3",
    # BM25/TfIdf trong bm25_index.pkl được pickle với sklearn 1.7.1 — bắt buộc trùng phiên bản.
    "scikit-learn==1.7.1",
    "scipy>=1.11.0,<2",
    "google-genai>=1.0.0,<2",
    "pymysql>=1.1.0,<2",
    "redis>=5.0.0,<6",
    "prometheus-client>=0.21.0,<0.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9",
    "pytest-cov>=6.0.0,<7",
    "fakeredis>=2.23.0,<3",
    "httpx>=0.27.0,<1",
    "ruff>=0.8.0,<1",
    "mypy>=1.14.0,<2",
    "types-redis>=4.6.0",
]
rerank = [
    "sentence-transformers>=3.0.0,<4",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "app*",
    "core*",
    "domain*",
    "generation*",
    "llm*",
    "pipelines*",
    "providers*",
    "repositories*",
    "retrieval*",
    "services*",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = [
    "--cov=pipelines",
    "--cov=generation",
    "--cov=providers",
    "--cov=retrieval",
    "--cov=services",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=70",
]

[tool.coverage.run]
branch = true
source = ["pipelines", "generation", "providers", "retrieval", "services"]
omit = [
    "*/tests/*",
    "services/admin/data_quality_service.py",
    "services/admin/log_store.py",
    "services/admin/system_service.py",
    "services/itinerary/builder.py",
    "services/itinerary/catalog.py",
    "services/itinerary/scoring.py",
]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
fail_under = 70

[tool.mypy]
python_version = "3.12"
explicit_package_bases = true
mypy_path = ["."]
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
packages = [
    "core",
    "domain",
    "generation",
    "providers",
    "pipelines",
    "repositories",
    "retrieval",
    "app",
]
follow_imports = "skip"
exclude = ["tests/", "scripts/", "jobs/"]

[[tool.mypy.overrides]]
module = [
    "dotenv.*",
    "rank_bm25.*",
    "google.*",
    "genai.*",
    "sklearn.*",
    "sentence_transformers.*",
    "opentelemetry.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["app.routers.*"]
disable_error_code = ["no-any-return"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"scripts/06_build_bm25_index.py" = ["E402"]
"generation/prompt_builder.py" = ["E501"]
"pipelines/rag_pipeline.py" = ["E501"]
"retrieval/bm25_retriever.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = [
    "app",
    "core",
    "domain",
    "generation",
    "llm",
    "pipelines",
    "providers",
    "repositories",
    "retrieval",
    "services",
]
